selecting & page are ready